--- a/main.html
+++ b/main.html
@@ -7,7 +7,30 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<form method="post">
+		
+		<label for="name">Name</label>
+		<input type="text" id="name" required>
+		<label for="email">Email</label>
+		<input type="email" id="email" required>
+		<label>Gender</label>
+		<input type="radio buttons" name="gender" required>
+		
+		<label for="cars">Car Brands</label>
+		<select type="Dropdown (Options: BMW, Audi, Mercedez)" id="cars">
+			<option>BMW</option>
+			<option>Audi</option>
+			<option>Mercedez</option>
+			
+		<label for="carage">Car Age</label>
+		<input type="number" id="carage" required>
+		<label for="dop">Date of Purchase (dop)</label>
+		<input type="date" id="dop" required>
+		<label for="password">Password</label>
+		<input type="password" id="password" required>
+		<label>Submit Button</label>
+		<button type="submit">
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
