--- a/main.html
+++ b/main.html
@@ -13,8 +13,12 @@
 		<input type="text" id="name" required>
 		<label for="email">Email</label>
 		<input type="email" id="email" required>
-		<label>Gender</label>
-		<input type="radio buttons" name="gender" required>
+		<label for="male">Male</label>
+    <input type="radio" id="male" name="gender" value="male" required>
+		<label for="female">Female</label>
+    <input type="radio" id="female" name="gender" value="female" required>
+    
+			
 		
 		<label for="cars">Car Brands</label>
 		<select type="Dropdown (Options: BMW, Audi, Mercedez)" id="cars">
@@ -22,7 +26,7 @@
 			<option>Audi</option>
 			<option>Mercedez</option>
 			
-		<label for="carage">Car Age</label>
+		<label for="carage">CarAge</label>
 		<input type="number" id="carage" required>
 		<label for="dop">Date of Purchase (dop)</label>
 		<input type="date" id="dop" required>
