--- a/main.html
+++ b/main.html
@@ -17,17 +17,15 @@
     <input type="radio" id="male" name="gender" value="male" required>
 		<label for="female">Female</label>
     <input type="radio" id="female" name="gender" value="female" required>
-    
-			
-		
+
 		<label for="cars">Car Brands</label>
 		<select type="Dropdown (Options: BMW, Audi, Mercedez)" id="cars">
 			<option>BMW</option>
 			<option>Audi</option>
 			<option>Mercedez</option>
 			
-		<label for="carage">CarAge</label>
-		<input type="number" id="carage" required>
+		<label for="carage">Car Age</label>
+		<input type="text" id="carage" required>
 		<label for="dop">Date of Purchase (dop)</label>
 		<input type="date" id="dop" required>
 		<label for="password">Password</label>
